[project]
name = "stables"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
stables = { path = "./src/stables" }
jupyter-contrib-nbextensions = { git = "https://github.com/blaiseli/jupyter_contrib_nbextensions" }

[tool.uv]
package = true
