[project]
name = "stables"
version = "0.1.0"
description = "stables data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.0",
    "dlt[postgres]>=1.12.3",
    "dbt-core>=1.10.4",
    "dbt-postgres>=1.9.0",
    "pyarrow>=21.0.0",
]

[tool.uv.sources]
stables = { path = "./src/stables" }
jupyter-contrib-nbextensions = { git = "https://github.com/blaiseli/jupyter_contrib_nbextensions" }

[tool.uv]
package = true
